implemented the overview pug page , create the viewRoutes.js file to serve the express router, created the viewController aswell in order to maintain the MVC design

--- a/views/base.pug
+++ b/views/base.pug
@@ -5,16 +5,15 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         link(rel="stylesheet", href="css/style.css")
         link(rel="shortcut icon", type='imagepng' href="imgfavicon.png")
-        link(rel="stylesheet", href="https:fonts.googleapis.comcss?family=Lato:300,300i,700")
-        title Natours | Exciting tours for adventurous people
+        link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Lato:300,300i,700")
+        title Natours | #{title}
     body
         // Header
         include _header
 
         //CONTENT 
-
-        section.overview 
-            h1= tour
+        block content
+            h1 this is a placeholder heading
 
         //FOOTER 
         include _footer
