--- a/views/tour.pug
+++ b/views/tour.pug
@@ -1,6 +1,15 @@
 
 extends base 
 
+block append head
+    link(rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+        integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+        crossorigin="")
+    script(src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+        integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+        crossorigin="")
+    script(defer, src='/js/leaflet.js')
+
 //-mixins are basically reusable pieces of code that we can pass arguments into,
 //- same as mixin in Saas, pre-processor 
 
@@ -79,7 +88,7 @@ block content
                 img.picture-box__img(src=`/img/tours/${image}`, class=`.picture-box__img--${i + 1}` alt=`${i + 1}`)
 
     section.section-map
-        #map
+        #map(data-locations=`${JSON.stringify(tour.locations)}`)
 
     section.section-reviews
         .reviews
