--- a/views/base.pug
+++ b/views/base.pug
@@ -18,3 +18,6 @@ html(lang="en")
 
         //FOOTER 
         include _footer
+
+        script(src='https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.3/axios.min.js')
+        script(src='/js/login.js')
